--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,21 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GameLair</title>
-</head>
-<body>
-  <h1>GameLair Backlinks</h1>
-  <ul>
-    <li><a href="https://gamelair.me/fastest-ttk-smg-warzone/" rel="dofollow">Fastest TTK SMG Warzone: The 4 Ultimate Meta Picks (2025)</a></li>
-    <li><a href="https://gamelair.me/what-is-zombie-royale-warzone/" rel="dofollow">What is Zombie Royale Warzone? The Ultimate 2025 Guide</a></li>
-    <li><a href="https://gamelair.me/best-arctis-nova-headset/" rel="dofollow">Best Arctis Nova Headset 2025: The 3 Ultimate Picks</a></li>
-    <li><a href="https://gamelair.me/what-is-gaming-ai/" rel="dofollow">What is Gaming AI? The 5 Ultimate Ways It's Changing Games</a></li>
-    <li><a href="https://gamelair.me/project-atlas-cloud-gaming-beta/" rel="dofollow">Project Atlas Cloud Gaming Beta Invites Reportedly Sent Out</a></li>
-    <li><a href="https://gamelair.me/forge-and-fire-gaming/" rel="dofollow">What is Forge and Fire Gaming?</a></li>
-    <li><a href="https://gamelair.me/best-witcher-3-beginner-build-2025/" rel="dofollow">Witcher 3 Alchemy Guide: The 5 Potions You Must Craft First</a></li>
-    <li><a href="https://gamelair.me/fortnite-server-status/" rel="dofollow">Fortnite Server Status: Is It Down? (Simpsons Event & New Season)</a></li>
-  </ul>
-</body>
-</html>
+name: Deploy static content to Pages
+
+on:
+  push:
+    branches: ["main"]
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
+jobs:
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: '.'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
